--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -1,9 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.RecipeDetailActivity">
+    <!--
+    data class SpoonacularIngredient(
+        val amount: String,
+        val unit: String,
+        val name: String
+    )
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    data class RecipeDetailResponse(
+        val id: Int,
+        val title: String,
+        val image: String,
+        val readyInMinutes: Int,
+        val sourceUrl: String,
+        val extendedIngredients: List<SpoonacularIngredient>
+    )
+    -->
+
+    <ImageView
+        android:id="@+id/recipeImage"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:scaleType="fitCenter"
+        />
+
+    <TextView
+        android:id="@+id/cookTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"
+        android:text="ready in mins"
+        android:gravity="center"
+        android:textSize="24dp"/>
+
+    <TextView
+        android:id="@+id/recipeTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"
+        android:text="title"
+        android:gravity="center"
+        android:textSize="24dp"/>
+
+    <Button
+        android:id="@+id/gotoRecipeOnline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="goto url"/>
+
+    <Button
+        android:id="@+id/addToRecipeBook"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="add to book"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recipeIngredientListContainer"
+        />
+
+</LinearLayout>
