--- a/app/src/main/res/layout/list_item_recipe_book_list.xml
+++ b/app/src/main/res/layout/list_item_recipe_book_list.xml
@@ -1,36 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="wrap_content" android:padding="20dp">
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
         android:text="name"
-        android:gravity="center"
-        android:textSize="24dp"/>
-
-    <TextView
-        android:id="@+id/recipeCount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
-        android:text="count"
-        android:gravity="center"
-        android:textSize="24dp"/>
+        android:layout_weight="1"
+        android:textSize="20dp"/>
 
     <Button
         android:id="@+id/viewRecipeBookButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
-        android:text="goto book"
+        android:layout_weight="1"
+        android:text="View"
         android:gravity="center"
-        android:textSize="24dp"/>
+        android:textSize="20dp"/>
 
 </LinearLayout>
