--- a/app/src/main/res/layout/list_item_search_result.xml
+++ b/app/src/main/res/layout/list_item_search_result.xml
@@ -1,42 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content" android:padding="20dp" android:layout_gravity="center">
 
     <ImageView
         android:id="@+id/recipeImage"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:scaleType="fitCenter"
-        />
+        android:scaleType="fitCenter"/>
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
+        android:padding="5dp"
         android:text="name"
         android:gravity="center"
         android:textSize="24dp"/>
 
-    <TextView
-        android:id="@+id/cookTime"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
-        android:text="cook time (min)"
-        android:gravity="center"
-        android:textSize="24dp"/>
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:padding="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textSize="24dp"
+            android:text="Cook Time: "/>
+
+        <TextView
+            android:id="@+id/cookTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="cook time (min)"
+            android:gravity="center"
+            android:textSize="24dp"/>
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/viewRecipeButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
-        android:text="goto recipe"
+        android:padding="5dp"
+        android:text="go to recipe"
         android:gravity="center"
         android:textSize="24dp"/>
 
