--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
 
         <TextView
             android:layout_width="match_parent"
@@ -38,15 +39,6 @@
             android:layout_marginBottom="20dp"
             android:inputType="textPassword"
             android:hint="@string/password"
-            android:textSize="18dp"/>
-
-        <EditText
-            android:id="@+id/signUpName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:hint="@string/username"
             android:textSize="18dp"/>
 
         <Button
