--- a/app/src/main/res/layout/modal_select_recipe_book.xml
+++ b/app/src/main/res/layout/modal_select_recipe_book.xml
@@ -3,4 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="20dp"
+        android:text="Select a Book"
+        android:textSize="24dp"/>
+
+
+
 </LinearLayout>
