--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.RecipeDetailActivity">
+    tools:context=".activities.RecipeDetailActivity"
+    android:background="@color/Background">
     <!--
     data class SpoonacularIngredient(
         val amount: String,
@@ -38,7 +39,8 @@
         android:layout_marginBottom="20sp"
         android:text="title"
         android:gravity="center"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        android:textColor="@color/Brown"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -52,7 +54,8 @@
             android:layout_weight="1"
             android:padding="5dp"
             android:textSize="24dp"
-            android:text="Cook time: "/>
+            android:text="Cook time: "
+            android:textColor="@color/Brown"/>
 
         <TextView
             android:id="@+id/cookTime"
@@ -60,7 +63,8 @@
             android:layout_height="wrap_content"
             android:text="ready in mins"
             android:layout_weight="1"
-            android:textSize="24dp"/>
+            android:textSize="24dp"
+            android:textColor="@color/Brown"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -68,7 +72,8 @@
             android:layout_weight="1"
             android:padding="5dp"
             android:textSize="24dp"
-            android:text="minutes"/>
+            android:text="minutes"
+            android:textColor="@color/Brown"/>
 
     </LinearLayout>
 
@@ -84,13 +89,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="go to recipe url"/>
+        android:text="go to recipe url"
+        android:background="@color/Green"
+        android:textColor="@color/LightYellow"/>
 
     <Button
         android:id="@+id/addToRecipeBook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="add to a recipe book"/>
+        android:text="add to a recipe book"
+        android:background="@color/Green"
+        android:textColor="@color/LightYellow"/>
 
 </LinearLayout>
