--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activities.SearchResultActivity">
+    tools:context=".activities.SearchResultActivity"
+    android:background="@color/Background">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
