--- a/app/src/main/res/layout/fragment_recipe_book_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_book_list.xml
@@ -6,14 +6,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:background="@color/Background">
 
         <Button
             android:id="@+id/createBook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="New Book"/>
+            android:text="New Book"
+            android:background="@color/Green"
+            android:textColor="@color/LightYellow"/>
 
         <Button
             android:id="@+id/logout"
@@ -21,7 +24,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Logout"/>
+            android:text="Logout"
+            android:background="@color/Green"
+            android:textColor="@color/LightYellow"/>
 
     </LinearLayout>
 
@@ -30,5 +35,6 @@
         android:layout_height="match_parent"
         android:padding="20dp"
         android:id="@+id/recipeBookListContainer"
+        android:background="@color/Background"
         />
 </LinearLayout>
