--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:background="@color/Background">
 
         <TextView
             android:layout_width="match_parent"
@@ -18,7 +19,8 @@
             android:layout_marginBottom="20sp"
             android:text="@string/signup"
             android:gravity="center"
-            android:textSize="24dp"/>
+            android:textSize="24dp"
+            android:textColor="@color/Brown"/>
 
         <EditText
             android:id="@+id/signUpEmail"
@@ -28,7 +30,8 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
             android:hint="@string/email"
-            android:textSize="18dp"/>
+            android:textSize="18dp"
+            android:textColor="@color/Brown"/>
 
         <EditText
             android:id="@+id/signUpPassword"
@@ -39,14 +42,17 @@
             android:layout_marginBottom="20dp"
             android:inputType="textPassword"
             android:hint="@string/password"
-            android:textSize="18dp"/>
+            android:textSize="18dp"
+            android:textColor="@color/Brown"/>
 
         <Button
             android:id="@+id/signUpButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="@string/signup"/>
+            android:text="@string/signup"
+            android:background="@color/Green"
+            android:textColor="@color/LightYellow"/>
 
     </LinearLayout>
 
