--- a/app/src/main/res/layout/list_item_recipe_book_list.xml
+++ b/app/src/main/res/layout/list_item_recipe_book_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:padding="20dp">
+    android:layout_height="wrap_content" android:padding="20dp"
+    android:background="@color/Background">
 
     <TextView
         android:id="@+id/name"
@@ -9,7 +10,8 @@
         android:layout_height="wrap_content"
         android:text="name"
         android:layout_weight="1"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:textColor="@color/Brown"/>
 
     <Button
         android:id="@+id/viewRecipeBookButton"
@@ -18,6 +20,8 @@
         android:layout_weight="1"
         android:text="View"
         android:gravity="center"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:background="@color/Green"
+        android:textColor="@color/LightYellow"/>
 
 </LinearLayout>
