--- a/app/src/main/res/layout/list_item_search_result.xml
+++ b/app/src/main/res/layout/list_item_search_result.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:padding="20dp" android:layout_gravity="center">
+    android:layout_height="wrap_content" android:padding="20dp" android:layout_gravity="center"
+    android:background="@color/Background">
 
     <ImageView
         android:id="@+id/recipeImage"
@@ -16,7 +17,8 @@
         android:padding="5dp"
         android:text="name"
         android:gravity="center"
-        android:textSize="24dp"/>
+        android:textSize="24dp"
+        android:textColor="@color/Brown"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,7 +32,8 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:textSize="24dp"
-            android:text="Cook Time: "/>
+            android:text="Cook Time: "
+            android:textColor="@color/Brown"/>
 
         <TextView
             android:id="@+id/cookTime"
@@ -39,10 +42,10 @@
             android:padding="5dp"
             android:text="cook time (min)"
             android:gravity="center"
-            android:textSize="24dp"/>
+            android:textSize="24dp"
+            android:textColor="@color/Brown"/>
 
     </LinearLayout>
-
 
     <Button
         android:id="@+id/viewRecipeButton"
@@ -51,6 +54,8 @@
         android:padding="5dp"
         android:text="go to recipe"
         android:gravity="center"
-        android:textSize="24dp"/>
+        android:textSize="24dp"
+        android:background="@color/Green"
+        android:textColor="@color/LightYellow"/>
 
 </LinearLayout>
