--- a/app/src/main/res/layout/modal_select_recipe_book.xml
+++ b/app/src/main/res/layout/modal_select_recipe_book.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/LightYellow">
 
     <TextView
         android:layout_width="match_parent"
@@ -9,8 +10,7 @@
         android:gravity="center"
         android:padding="20dp"
         android:text="Select a Book"
-        android:textSize="24dp"/>
-
-
+        android:textSize="24dp"
+        android:textColor="@color/Brown"/>
 
 </LinearLayout>
