--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -24,82 +24,103 @@
     )
     -->
 
-    <ImageView
-        android:id="@+id/recipeImage"
+    <androidx.core.widget.ContentLoadingProgressBar
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:scaleType="fitCenter"
-        android:padding="10dp"/>
+        android:paddingLeft="120dp"
+        android:paddingRight="120dp"
+        android:layout_height="match_parent"
+        style="?android:attr/progressBarStyleLargeInverse"
+        android:id="@+id/loadingBar"/>
 
-    <TextView
-        android:id="@+id/recipeTitle"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
-        android:text="title"
-        android:gravity="center"
-        android:textSize="30dp"
-        android:textColor="@color/Brown"/>
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/recipeImage"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:scaleType="fitCenter"
+            android:padding="10dp"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/recipeTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:textSize="24dp"
-            android:text="Cook time: "
+            android:layout_marginTop="20sp"
+            android:layout_marginBottom="20sp"
+            android:text="title"
+            android:gravity="center"
+            android:textSize="30dp"
             android:textColor="@color/Brown"/>
 
-        <TextView
-            android:id="@+id/cookTime"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ready in mins"
-            android:layout_weight="1"
-            android:textSize="24dp"
-            android:textColor="@color/Brown"/>
+            android:orientation="horizontal"
+            android:layout_gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:textSize="24dp"
+                android:text="Cook time: "
+                android:textColor="@color/Brown"/>
+
+            <TextView
+                android:id="@+id/cookTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ready in mins"
+                android:layout_weight="1"
+                android:textSize="24dp"
+                android:textColor="@color/Brown"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:textSize="24dp"
+                android:text="minutes"
+                android:textColor="@color/Brown"/>
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:textSize="24dp"
-            android:text="minutes"
-            android:textColor="@color/Brown"/>
+            android:padding="10dp"
+            android:id="@+id/recipeIngredientListContainer"
+            />
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/gotoRecipeOnline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="go to recipe url"
+            android:background="@color/Green"
+            android:textColor="@color/LightYellow"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:id="@+id/recipeIngredientListContainer"
-        />
+        <Button
+            android:id="@+id/addToRecipeBook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="add to a recipe book"
+            android:background="@color/Green"
+            android:textColor="@color/LightYellow"/>
 
-    <Button
-        android:id="@+id/gotoRecipeOnline"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="go to recipe url"
-        android:background="@color/Green"
-        android:textColor="@color/LightYellow"/>
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/addToRecipeBook"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="add to a recipe book"
-        android:background="@color/Green"
-        android:textColor="@color/LightYellow"/>
+    </ScrollView>
 
 </LinearLayout>
