--- a/app/src/main/res/layout/list_item_ingredient_list.xml
+++ b/app/src/main/res/layout/list_item_ingredient_list.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content" android:background="@color/Background">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="name"
-        android:gravity="center"
-        android:textSize="18dp"
-        android:textColor="@color/Brown"/>
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="amount"
-        android:gravity="center"
-        android:textSize="18dp"
-        android:textColor="@color/Brown"/>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="name"
+            android:gravity="left"
+            android:textSize="14dp"
+            android:layout_weight="1"
+            android:textColor="@color/Brown"/>
+
+        <TextView
+            android:id="@+id/amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="amount"
+            android:gravity="right"
+            android:textSize="14dp"
+            android:layout_weight="1"
+            android:textColor="@color/Brown"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_height="1dp"
+        android:background="@color/Green"/>
 
 </LinearLayout>
