--- a/app/src/main/res/layout/list_item_search_result.xml
+++ b/app/src/main/res/layout/list_item_search_result.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:padding="20dp" android:layout_gravity="center"
+    android:layout_height="wrap_content" android:padding="15dp" android:layout_gravity="center"
     android:background="@color/Background">
 
     <ImageView
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:textSize="24dp"
+            android:textSize="18dp"
             android:text="Cook Time: "
             android:textColor="@color/Brown"/>
 
@@ -42,7 +42,7 @@
             android:padding="5dp"
             android:text="cook time (min)"
             android:gravity="center"
-            android:textSize="24dp"
+            android:textSize="18dp"
             android:textColor="@color/Brown"/>
 
     </LinearLayout>
@@ -55,7 +55,14 @@
         android:text="go to recipe"
         android:gravity="center"
         android:textSize="24dp"
+        android:fontFamily="sans-serif-light"
         android:background="@color/Green"
         android:textColor="@color/LightYellow"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="1dp"
+        android:background="@color/Green"/>
 
 </LinearLayout>
